{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 14,
  "lineage": "58eb9f1e-e241-5610-7e31-90538ea68eed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "challenge2_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:549395784991:loadbalancer/net/challenge2-lb/abb212468780b563",
            "arn_suffix": "net/challenge2-lb/abb212468780b563",
            "dns_name": "challenge2-lb-abb212468780b563.elb.ap-south-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:549395784991:loadbalancer/net/challenge2-lb/abb212468780b563",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "challenge2-lb",
            "security_groups": [
              "sg-0d4a150c83f2a3ffc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007582a567c5fc75b"
              },
              {
                "subnet_id": "subnet-0fa7f9cac27f5ef71"
              }
            ],
            "subnets": [
              "subnet-007582a567c5fc75b",
              "subnet-0fa7f9cac27f5ef71"
            ],
            "vpc_id": "vpc-037595ae28667c25d",
            "zone_id": "ZVDDRBQ08TROA"
          },
          "dependencies": [
            "aws_security_group.lb_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "challenge2_lbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:549395784991:listener/net/challenge2-lb/abb212468780b563/580994941e845b0e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:549395784991:targetgroup/challenge2-lbt/68f85d4622210a04",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:549395784991:listener/net/challenge2-lb/abb212468780b563/580994941e845b0e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:549395784991:loadbalancer/net/challenge2-lb/abb212468780b563",
            "mutual_authentication": [],
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.challenge2_lb",
            "aws_lb_target_group.challenge2_lbt",
            "aws_security_group.lb_security_group",
            "data.aws_vpcs.in_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "challenge2_lbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:549395784991:targetgroup/challenge2-lbt/68f85d4622210a04",
            "arn_suffix": "targetgroup/challenge2-lbt/68f85d4622210a04",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:549395784991:targetgroup/challenge2-lbt/68f85d4622210a04",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "challenge2-lbt",
            "port": 22,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-037595ae28667c25d"
          },
          "dependencies": [
            "data.aws_vpcs.in_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:security-group/sg-067ca2ed615a274da",
            "description": "Security group for allowing SSH traffic to the NLB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067ca2ed615a274da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4a150c83f2a3ffc"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "instance-security-group",
            "name_prefix": "",
            "owner_id": "549395784991",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037595ae28667c25d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:security-group/sg-0d4a150c83f2a3ffc",
            "description": "Security group for allowing SSH traffic to the NLB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4a150c83f2a3ffc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lb-ssh-security-group",
            "name_prefix": "",
            "owner_id": "549395784991",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037595ae28667c25d"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}